--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.1.1",
     "typescript": "~4.1.5",
     "vue-template-compiler": "^2.6.11"
   }
