--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "core-js": "^3.6.5",
+    "animejs": "^3.2.1",
+    "core-js": "^3.18.1",
     "vue": "^2.6.11",
+    "vue-animejs": "^2.1.1",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^9.1.2",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@types/animejs": "^3.1.4",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
